	PR rtl-optimization/16643 	* cfglayout.h (cfg_layout_initialize): Add a flags parameter. 	* cfglayout.c (cfg_layout_initialize): Pass it to cleanup_cfg. 	* basic-block.h (reorder_basic_blocks): Add a flags parameter. 	* cfglayout.c (reorder_basic_blocks): Pass it to cfg_layout_initialize. 	(partition_hot_cold_basic_blocks): Pass 0 to cfg_layout_initialize. 	* function.c (thread_prologue_and_epilogue_insns): Likewise. 	* rtl.h (tracer): Add a flags parameter. 	* tracer.c (tracer): Pass it to cfg_layout_initialise. 	* passes.c (rest_of_handle_stack_regs): Pass 0 to reorder_basic_blocks. 	(rest_of_handle_reorder_blocks): Update calls to tracer and 	reorder_basic_blocks, passing CLEANUP_UPDATE_LIFE if appropriate. 	(rest_of_handle_tracer): Pass 0 to tracer. 	(rest_of_handle_loop2): Pass 0 to cfg_layout_initialize.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85191 138bc75d-0d04-0410-961f-82ee72b054a4